# deeprey-assessment

wx-opengl-app/: .gitignore  CMakeLists.txt  README.md
wx-opengl-app/build-release/: wx-opengl-app
wx-opengl-app/src/: App.cpp  App.h  MainFrame.cpp  MainFrame.h  OpenGLCanvas.cpp  OpenGLCanvas.h
